@@ -50,7 +50,7 @@ GLOBALTAGDATA='GR_R_53_V8::All'
 GLOBALTAGMC='START53_V7::All'
 
 #Skimmer Version, also folder name on dcache
-VERSION=v96
+VERSION=v97
 
 # Your Username on the grid
 #For some users this differs from the Aachen Clustername, these users have to set it by hand!
